UN-Uniphy about us page

--- a/uniphynew/about/index.html
+++ b/uniphynew/about/index.html
@@ -62,7 +62,7 @@
          }
 
          .mission-section .mission-main-div .quote-box p {
-            font-size: 30px; 
+            font-size: 23px; 
             margin: 60px 20px; 
             line-height: normal;
          }
@@ -314,9 +314,9 @@
                                       alt="quote top" 
                                       class="quote-top animate__animated animate__fadeInUp">
                                  <p class="animate__animated animate__fadeInUp">
-                                   To deliver measurable business outcomes by leveraging AI-powered DevOps, intelligent automation, 
-                                   and unified transformation frameworks—driving 100% release acceleration, incident elimination, 
-                                   and productivity gains across enterprise ecosystems.
+                                    At Uniphy, our mission is to redefine how infrastructure and applications are created, deployed, and managed across any environment.
+                                    We empower teams to build, monitor, and fix systems faster without code using the power of AI-driven automation.
+                                    Whether your workloads live in the cloud, on-premises, or across multiple providers, Uniphy ensures a unified, secure, and intelligent platform for end-to-end DevOps operations.
                                  </p>
                                  <img src="../assets/images/quote-bottom.svg" 
                                       alt="quote bottom" 
@@ -332,14 +332,18 @@
                         <div class="container">
                            <div class="content-image__inner content-image__inner--image-left content-image__inner--">
                               <div class="content-image__image  content-image__image--align-left">
-                                 <h1 class="title-default-color boxes__titlec animate__animated animate__fadeInUp">What is Lorem Ipsum?</h1>
+                                 <h1 class="title-default-color boxes__titlec animate__animated animate__fadeInUp">Story / Motivation</h1>
                                  <div class="content-border-top"></div>
-                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                                    <p>Our founders, having faced the complexity of multi-cloud environments and hybrid architectures firsthand, envisioned a better way:
+                                    a no-code, AI-powered platform that connects creation, deployment, monitoring, and remediation into one seamless flow. </p>
+                                    <p>Our goal was to give organizations the speed and flexibility of the cloud, combined with the security and control of on-premises systems all powered by enterprise-grade protection and intelligent automation.</p>
+                                    <p>Today, Uniphy helps teams innovate faster, reduce operational overhead, and maintain confidence across every environment they manage.</p>
                               </div>
                               <div class="content-image__image  content-image__image--align-center">
                                  <img src="../assets/images/story-motivation.png" 
                                       alt="Motivation" 
-                                      class="motivation"/>
+                                      class="motivation"
+                                      style="max-width:70%"/>
                               </div>
                            </div>
                         </div>
