--- a/uniphynew/about/index.html
+++ b/uniphynew/about/index.html
@@ -127,6 +127,7 @@
             border-radius: 3px;
             border-top: 5px solid #ff6600;
             display: block;
+            margin-bottom: 1em;
          }
 
          .section-spacing-top {
@@ -298,7 +299,7 @@
                         <div class="container">
                            <div class="d-flex header-div-1">
                               <div class="d-flex animate__animated animate__fadeInUp">
-                                 <h1>About Us</h1>
+                                 <h2 style="margin-top: 33px;" class="text-center">Uniphy is where simplicity meets power, transforming how organizations create and operate technology securely, intelligently, and at scale.</h2>
                               </div>
                            </div>
                         </div>
@@ -335,7 +336,7 @@
                                  <h1 class="title-default-color boxes__titlec animate__animated animate__fadeInUp">Story / Motivation</h1>
                                  <div class="content-border-top"></div>
                                     <p>Our founders, having faced the complexity of multi-cloud environments and hybrid architectures firsthand, envisioned a better way:
-                                    a no-code, AI-powered platform that connects creation, deployment, monitoring, and remediation into one seamless flow. </p>
+                                       a no-code, AI-powered platform that connects creation, deployment, monitoring, and remediation into one seamless flow. </p>
                                     <p>Our goal was to give organizations the speed and flexibility of the cloud, combined with the security and control of on-premises systems all powered by enterprise-grade protection and intelligent automation.</p>
                                     <p>Today, Uniphy helps teams innovate faster, reduce operational overhead, and maintain confidence across every environment they manage.</p>
                               </div>
@@ -343,7 +344,7 @@
                                  <img src="../assets/images/story-motivation.png" 
                                       alt="Motivation" 
                                       class="motivation"
-                                      style="max-width:70%"/>
+                                      style="border-radius: 10px;"/>
                               </div>
                            </div>
                         </div>
@@ -355,14 +356,22 @@
                         <div class="container">
                            <div class="content-image__inner content-image__inner--image-left content-image__inner--">
                               <div class="content-image__image  content-image__image--align-center">
-                                 <img src="../assets/images/uniqueofuniphy.png" 
+                                 <img src="../assets/images/uniqueofuniphy.jpg" 
                                       alt="Uniqueness" 
-                                      class="Uniqueness"/>
+                                      class="Uniqueness"
+                                      style="border-radius: 10px;"/>
                               </div>
-                              <div class="content-image__image  content-image__image--align-left">
-                                 <h1 class="title-default-color boxes__titlec animate__animated animate__fadeInUp">What is Lorem Ipsum?</h1>
+                              <div class="content-image__image  content-image__image--align-left section-block__aboutus">
+                                 <h1 class="title-default-color boxes__titlec animate__animated animate__fadeInUp">What Makes Us Different</h1>
                                  <div class="content-border-top"></div>
-                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                                 <ul style="margin-left: 0;">
+                                    <li><span style="font-weight: 500;">Multi-Cloud & Hybrid Ready:</span> Seamlessly orchestrate and manage workloads across AWS, Azure, or on-premises all from one unified dashboard.</li>
+                                    <li><span style="font-weight: 500;">AI-Driven Operations:</span> Uniphy not only automates tasks but anticipates issues, recommends fixes, and continuously learns from your environment.</li>
+                                    <li><span style="font-weight: 500;">No-Code Simplicity:</span> Design, deploy, and maintain complete infrastructure and pipelines through a visual interface no scripting required.</li>
+                                    <li><span style="font-weight: 500;">Built-In Security Gates:</span> From identity to compliance, Uniphy integrates security and policy enforcement into every stage of the lifecycle.</li>
+                                    <li><span style="font-weight: 500;">Unified Control Plane:</span> Monitor, build, deploy, and remediate from a single pane of glass reducing tool sprawl and improving visibility.</li>
+                                    <li><span style="font-weight: 500;">Flexible Deployment:</span> Cloud-native or on-premises, Uniphy fits your ecosystem without compromise.</li>
+                                 </ul>
                               </div>
                            </div>
                         </div>
@@ -414,7 +423,7 @@
                      <h4 class="footer-widget__title">Resources</h4>
                      <div class="menu-resource-container">
                         <ul id="menu-resource" class="menu">
-                           <li id="menu-item-7254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-7254"><a>Documents</a></li>
+                           <li id="menu-item-7254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-7254"><a href="#nav_menu-3">Documents</a></li>
                         </ul>
                      </div>
                   </section>
