--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -410,7 +410,7 @@
                         <h4 class="footer-widget__title">Resources</h4>
                         <div class="menu-resource-container">
                            <ul id="menu-resource" class="menu">
-                              <li id="menu-item-7254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-7254"><a>Documents</a></li>
+                              <li id="menu-item-7254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-7254"><a href="#nav_menu-3">Documents</a></li>
                            </ul>
                         </div>
                      </section>
