--- a/uniphynew/about/index.html
+++ b/uniphynew/about/index.html
@@ -82,8 +82,8 @@
                      </nav>
                   </div>
                   <div class="main-header__cta">
-                     <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--text" rel="noopener noreferrer">Sign in</a>
-                     <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--white" rel="noopener noreferrer">Sign up</a>
+                     <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--text" rel="noopener noreferrer">Sign in</a>
+                     <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--white" rel="noopener noreferrer">Sign up</a>
                   </div>
                </div>
                <div class="main-header__menu-mobile">
@@ -207,7 +207,7 @@
                                  </a>
                               </li>
                               <li id="menu-item-1843" class="social-footer__item social-footer__item--location menu-item menu-item-type-post_type menu-item-object-page menu-item-1843 margin-none footer-location-item"><a style="display: flex;"><p style="font-size: medium; padding-left: 10px;">5805 Callaghan Road, Suite #115, San Antonio, TX 78228, USA</p></a></li>
-                              <li id="footer-email-item" class="social-footer__item social-footer__item--email menu-item menu-item-type-post_type menu-item-object-page menu-item-1843 margin-none"><a href="mailto:support@uniphy.com"><span class="margin-none" style="font-size: medium; padding-left: 10px;">support@uniphy.com</span></a></li>
+                              <li id="footer-email-item" class="social-footer__item social-footer__item--email menu-item menu-item-type-post_type menu-item-object-page menu-item-1843 margin-none"><a href="mailto:support@uniphyops.com"><span class="margin-none" style="font-size: medium; padding-left: 10px;">support@uniphyops.com</span></a></li>
                               <li id="footer-phone-item" class="social-footer__item social-footer__item--phone menu-item menu-item-type-post_type menu-item-object-page menu-item-1843 margin-none"><a href="tel:+1 (210) 858-5280"><span class="margin-none" style="font-size: medium; padding-left: 10px;">+1 (210) 858-5280</span></a></li>
                            </ul>
                         </div>
@@ -268,8 +268,8 @@
             </li>
          </ul>
          <div class="ns-mobile-menu__cta">
-            <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--purple" rel="noopener noreferrer">Sign up</a><br>
-            <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--underline" rel="noopener noreferrer">Sign in</a>
+            <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--purple" rel="noopener noreferrer">Sign up</a><br>
+            <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--underline" rel="noopener noreferrer">Sign in</a>
          </div>
       </div>
       <!--googleoff: all-->
