--- a/uniphynew/index.html
+++ b/uniphynew/index.html
@@ -83,8 +83,8 @@
                      </nav>
                   </div>
                   <div class="main-header__cta">
-                     <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--text" rel="noopener noreferrer">Sign in</a>
-                     <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--white" rel="noopener noreferrer">Sign up</a>
+                     <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--text" rel="noopener noreferrer">Sign in</a>
+                     <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--white" rel="noopener noreferrer">Sign up</a>
                   </div>
                </div>
                <!-- Mobile view menu -->
@@ -116,7 +116,7 @@
                                        <p>All-in-one, no-code, AI powered platform that automates infrastructure, deployments, and operations — delivering faster releases, fewer incidents, and lower costs.</p>
                                     </div>
                                     <div class="cta-row cta-row--horizontal cta-row--center">
-                                       <a class="ns-btn ns-btn--purple animate__animated animate__fadeInUp" href="https://uniphyops.com/" target="_blank" rel="noopener noreferrer">Get Started for free</a>						
+                                       <a class="ns-btn ns-btn--purple animate__animated animate__fadeInUp" href="https://portal.uniphyops.com" target="_blank" rel="noopener noreferrer">Get Started for free</a>						
                                        <a class="ns-btn ns-btn--default animate__animated animate__fadeInUp" href="schedule-a-demo/index.html" target="">Schedule a demo</a>			
                                     </div>
                                  </div>
@@ -325,7 +325,7 @@
                                  </div>
                                  <div class="cta__buttons">
                                     <div class="cta-row cta-row--horizontal cta-row--center">
-                                       <a class="ns-btn ns-btn--white " href="https://uniphyops.com/" target="_blank" rel="noopener noreferrer">Get Started For Free</a>
+                                       <a class="ns-btn ns-btn--white " href="https://portal.uniphyops.com" target="_blank" rel="noopener noreferrer">Get Started For Free</a>
                                        <a class="ns-btn ns-btn--white-border " href="schedule-a-demo/index.html" target="">Schedule A Demo</a>
                                     </div>
                                  </div>
@@ -358,7 +358,7 @@
                                  </a>
                               </li>
                               <li id="menu-item-1843" class="social-footer__item social-footer__item--location menu-item menu-item-type-post_type menu-item-object-page menu-item-1843 margin-none footer-location-item"><a style="display: flex;"><p style="font-size: medium; padding-left: 10px;">5805 Callaghan Road, Suite #115, San Antonio, TX 78228, USA</p></a></li>
-                              <li id="footer-email-item" class="social-footer__item social-footer__item--email menu-item menu-item-type-post_type menu-item-object-page menu-item-1843 margin-none"><a href="mailto:support@uniphy.com"><span class="margin-none" style="font-size: medium; padding-left: 10px;">support@uniphy.com</span></a></li>
+                              <li id="footer-email-item" class="social-footer__item social-footer__item--email menu-item menu-item-type-post_type menu-item-object-page menu-item-1843 margin-none"><a href="mailto:support@uniphyops.com"><span class="margin-none" style="font-size: medium; padding-left: 10px;">support@uniphyops.com</span></a></li>
                               <li id="footer-phone-item" class="social-footer__item social-footer__item--phone menu-item menu-item-type-post_type menu-item-object-page menu-item-1843 margin-none"><a href="tel:+1 (210) 858-5280"><span class="margin-none" style="font-size: medium; padding-left: 10px;">+1 (210) 858-5280</span></a></li>
                            </ul>
                         </div>
@@ -419,8 +419,8 @@
             </li>
          </ul>
          <div class="ns-mobile-menu__cta">
-            <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--purple" rel="noopener noreferrer">Sign up</a><br>
-            <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--underline" rel="noopener noreferrer">Sign in</a>
+            <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--purple" rel="noopener noreferrer">Sign up</a><br>
+            <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--underline" rel="noopener noreferrer">Sign in</a>
          </div>
       </div>
       <!--googleoff: all-->
