--- a/uniphynew/pricing/index.html
+++ b/uniphynew/pricing/index.html
@@ -82,8 +82,8 @@
                      </nav>
                   </div>
                   <div class="main-header__cta">
-                     <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--text" rel="noopener noreferrer">Sign in</a>
-                     <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--white" rel="noopener noreferrer">Sign up</a>
+                     <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--text" rel="noopener noreferrer">Sign in</a>
+                     <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--white" rel="noopener noreferrer">Sign up</a>
                   </div>
                </div>
                <div class="main-header__menu-mobile">
@@ -119,7 +119,7 @@
                                  </div>
                                  <p class="pricing-box__price"><span>$0.05</span></p>
                                  <p class="pricing-box__terms">per month per resource</p>
-                                 <a href="https://uniphyops.com/" target="_blank" class="ns-btn dp-btn-0 animate__animated animate__fadeInUp" rel="noopener noreferrer">Start free trial</a>
+                                 <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn dp-btn-0 animate__animated animate__fadeInUp" rel="noopener noreferrer">Start free trial</a>
                                  <ul class="pricing-box__features list--check-green">
                                     <li>Provision & Monitor</li>
                                     <li>Provision cloud instances & containers</li>
@@ -134,7 +134,7 @@
                                  </div>
                                  <p class="pricing-box__price"><span>$0.35</span></p>
                                  <p class="pricing-box__terms">per month per resource</p>
-                                 <a href="https://uniphyops.com/" target="_blank" class="ns-btn dp-btn-1 animate__animated animate__fadeInUp" rel="noopener noreferrer">Start free trial</a>
+                                 <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn dp-btn-1 animate__animated animate__fadeInUp" rel="noopener noreferrer">Start free trial</a>
                                  <ul class="pricing-box__features list--check-green">
                                     <li>Automate. Fix. Deploy.</li>
                                     <li>Automated infrastructure fixes</li>
@@ -149,7 +149,7 @@
                                  </div>
                                  <p class="pricing-box__price"><span>$0.75</span></p>
                                  <p class="pricing-box__terms">per month per resource</p>
-                                 <a href="https://uniphyops.com/" target="_blank" class="ns-btn dp-btn-1 animate__animated animate__fadeInUp" rel="noopener noreferrer">Start free trial</a>
+                                 <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn dp-btn-1 animate__animated animate__fadeInUp" rel="noopener noreferrer">Start free trial</a>
                                  <ul class="pricing-box__features list--check-green">
                                     <li>Full platform customization & policies</li>
                                     <li>AI-driven provisioning, monitoring, scaling, and predictive insights</li>
@@ -221,7 +221,7 @@
                               </div>
                               <div class="cta__buttons">
                                  <div class="cta-row cta-row--horizontal cta-row--center">
-                                    <a class="ns-btn ns-btn--white " href="https://uniphyops.com/" target="_blank" rel="noopener noreferrer">Get Started For Free</a>
+                                    <a class="ns-btn ns-btn--white " href="https://portal.uniphyops.com" target="_blank" rel="noopener noreferrer">Get Started For Free</a>
 					 			            <a class="ns-btn ns-btn--white-border " href="../schedule-a-demo/index.html" target="">Schedule A Demo</a>
                                  </div>
                               </div>
@@ -248,7 +248,7 @@
                                  </a>
                               </li>
                               <li id="menu-item-1843" class="social-footer__item social-footer__item--location menu-item menu-item-type-post_type menu-item-object-page menu-item-1843 margin-none footer-location-item"><a style="display: flex;"><p style="font-size: medium; padding-left: 10px;">5805 Callaghan Road, Suite #115, San Antonio, TX 78228, USA</p></a></li>
-                              <li id="footer-email-item" class="social-footer__item social-footer__item--email menu-item menu-item-type-post_type menu-item-object-page menu-item-1843 margin-none"><a href="mailto:support@uniphy.com"><span class="margin-none" style="font-size: medium; padding-left: 10px;">support@uniphy.com</span></a></li>
+                              <li id="footer-email-item" class="social-footer__item social-footer__item--email menu-item menu-item-type-post_type menu-item-object-page menu-item-1843 margin-none"><a href="mailto:support@uniphyops.com"><span class="margin-none" style="font-size: medium; padding-left: 10px;">support@uniphyops.com</span></a></li>
                               <li id="footer-phone-item" class="social-footer__item social-footer__item--phone menu-item menu-item-type-post_type menu-item-object-page menu-item-1843 margin-none"><a href="tel:+1 (210) 858-5280"><span class="margin-none" style="font-size: medium; padding-left: 10px;">+1 (210) 858-5280</span></a></li>
                            </ul>
                         </div>
@@ -308,8 +308,8 @@
             </li>
          </ul>
          <div class="ns-mobile-menu__cta">
-            <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--purple" rel="noopener noreferrer">Sign up</a><br>
-            <a href="https://uniphyops.com/" target="_blank" class="ns-btn ns-btn--underline" rel="noopener noreferrer">Sign in</a>
+            <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--purple" rel="noopener noreferrer">Sign up</a><br>
+            <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--underline" rel="noopener noreferrer">Sign in</a>
          </div>
       </div>
       <!--googleoff: all-->
