--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -62,6 +62,7 @@
          <header class="main-header main-header--white" data-theme="main-header--white">
             <div class="container">
                <!-- System view menu -->
+               <div class="clearfix"></div>
                <div class="main-header__container">
                   <div class="main-header__logo">
                      <a href="../index.html" rel="home">
