UN-some css issue fix for iOS

--- a/uniphynew/schedule-a-demo/index.html
+++ b/uniphynew/schedule-a-demo/index.html
@@ -88,7 +88,7 @@
                <img src="../assets/images/uniphy.svg" alt="Uniphy Logo" class="main-header__logo__white">
                </a>
             </div>
-            <div class="main-header__menu">
+            <div class="main-header__menu pt-1">
                <nav>
                   <div class="menu-main-menu-container">
                      <ul id="header-menu" class="menu">
@@ -101,7 +101,7 @@
                   </div>
                </nav>
             </div>
-            <div class="main-header__cta">
+            <div class="main-header__cta pt-1">
                <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--text" rel="noopener noreferrer">Sign in</a>
                <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--white" rel="noopener noreferrer">Sign up</a>
             </div>
