--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -70,7 +70,7 @@
                      <img alt="uniphy-fevicon" src="../assets/images/uniphy.svg" class="main-header__logo__white">
                      </a>
                   </div>
-                  <div class="main-header__menu">
+                  <div class="main-header__menu pt-1">
                      <nav>
                         <div class="menu-main-menu-container">
                            <ul id="header-menu" class="menu">
@@ -83,7 +83,7 @@
                         </div>
                      </nav>
                   </div>
-                  <div class="main-header__cta">
+                  <div class="main-header__cta pt-1">
                      <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--text" rel="noopener noreferrer">Sign in</a>
                      <a href="https://portal.uniphyops.com" target="_blank" class="ns-btn ns-btn--white" rel="noopener noreferrer">Sign up</a>
                   </div>
