--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -322,24 +322,30 @@
                               </div>
                               <div class="boxes__wrapper boxes__wrapper--columns-four">
                                  <div class="boxes__box-item boxes__box-item--align-center features-container-card-1">
-                                    <div class="boxes__box-item__image">
-                                       <img width="85" height="85" src="../assets/images/system.png" class="attachment-full size-full" alt="" loading="lazy" />
+                                    <div class="feature-card-1">
+                                       <div class="boxes__box-item__image">
+                                          <img width="85" height="85" src="../assets/images/system.png" class="attachment-full size-full" alt="" loading="lazy" />
+                                       </div>
                                     </div>
                                     <div class="boxes__box-item__content">
                                        <h3>Fast feedback loops, the ability to manage projects, software change</h3>
                                     </div>
                                  </div>
                                  <div class="boxes__box-item boxes__box-item--align-center features-container-card-2">
-                                    <div class="boxes__box-item__image">
-                                       <img width="85" height="85" src="../assets/images/startup.png" class="attachment-full size-full" alt="" loading="lazy" />
+                                    <div class="feature-card-2">
+                                       <div class="boxes__box-item__image">
+                                          <img width="85" height="85" src="../assets/images/startup.png" class="attachment-full size-full" alt="" loading="lazy" />
+                                       </div>
                                     </div>
                                     <div class="boxes__box-item__content">
                                        <h3>Deploy to multiple environments like staging and production</h3>
                                     </div>
                                  </div>
                                  <div class="boxes__box-item boxes__box-item--align-center features-container-card-3">
-                                    <div class="boxes__box-item__image">
-                                       <img width="85" height="85" src="../assets/images/remidiate.png" class="attachment-full size-full" alt="" loading="lazy" />
+                                    <div class="feature-card-3">
+                                       <div class="boxes__box-item__image">
+                                          <img width="85" height="85" src="../assets/images/remidiate.png" class="attachment-full size-full" alt="" loading="lazy" />
+                                       </div>
                                     </div>
                                     <div class="boxes__box-item__content">
                                        <h3>Monitor, repair, remediate configuration drift and status of your application</h3>
