--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -77,7 +77,7 @@
                               <li id="menu-item-5281" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-4691 current_page_item menu-item-5281"><a href="index.html" aria-current="page">Features</a></li>
                               <li id="menu-item-6279" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6279"><a href="../pricing/index.html">Pricing</a></li>
                               <li id="menu-item-1833" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-1833">
-                                 <a href="">Resources</a>
+                                 <a href="#">Resources</a>
                               </li>
                            </ul>
                         </div>
@@ -417,7 +417,7 @@
                         <h4 class="footer-widget__title">Resources</h4>
                         <div class="menu-resource-container">
                            <ul id="menu-resource" class="menu">
-                              <li id="menu-item-7254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-7254"><a href="#nav_menu-3">Documents</a></li>
+                              <li id="menu-item-7254" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-7254"><a href="#">Documents</a></li>
                            </ul>
                         </div>
                      </section>
@@ -456,7 +456,7 @@
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5281"><a href="index.html" aria-current="page">Features</a></li>
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6279"><a href="../pricing/index.html">Pricing</a></li>
             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-1833">
-               <a href="">Resources</a>
+               <a href="#">Resources</a>
             </li>
          </ul>
          <div class="ns-mobile-menu__cta">
