UN-new page contact us

--- a/uniphynew/contact/index.html
+++ b/uniphynew/contact/index.html
@@ -128,7 +128,7 @@
                         <div class="content-image__inner content-image__inner--image-center content-image__inner--">
                            <div class="content-image__content content-image__content--full-width    content-image__content--smaller-title">
                               <div class="section-block__header text-center ">
-                                 <h1 class="section-block__title content-image__title section-block__title--with-subtitle content-image__title--with-subtitle animate__animated animate__fadeInUp">Schedule a Uniphy demo</h1>
+                                 <h1 class="section-block__title content-image__title section-block__title--with-subtitle content-image__title--with-subtitle animate__animated animate__fadeInUp">Contact Us</h1>
                                  <h4 class="section-block__subtitle content-image__subtitle"><br><br></h4>
                               </div>
                               <div class="section-block__image section-block__image--align-center">
