--- a/uniphynew/index.html
+++ b/uniphynew/index.html
@@ -386,6 +386,7 @@
                            <ul id="menu-resource" class="menu">
                               <li id="menu-item-1843" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1843"><a href="about/index.html">About Us</a></li>
                               <li id="menu-item-3823" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3823"><a href="schedule-a-demo/index.html">Schedule a demo</a></li>
+                              <li id="menu-item-3824" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3823"><a href="contact/index.html">Contact Us</a></li>
                            </ul>
                         </div>
                      </section>
