--- a/uniphynew/contact/index.html
+++ b/uniphynew/contact/index.html
@@ -464,7 +464,7 @@
       function submitform() {
           var f = document.getElementsByTagName('form')[0], e = $('#mailstatus'), s = $('#submitbtn');
             var formData = new FormData(f);
-            formData.append('Uniphy Website Sales Enquiry', subject);
+            formData.append('subject', 'Uniphy Website Sales Enquiry');
             e.text('');
             s.attr('disabled','disabled');
             fetch('../assets/php/contact-form.php', {
